fixing dark mode

--- a/assets/sass/components/_dark-mode.sass
+++ b/assets/sass/components/_dark-mode.sass
@@ -62,3 +62,8 @@
                             color: white
                         a:hover
                             color: #51E3D4
+            a
+                color: #51E3D4
+                text-decoration: none
+            a:hover
+                opacity: 0.7
