--- a/assets/sass/pages/_journal-detail.sass
+++ b/assets/sass/pages/_journal-detail.sass
@@ -29,7 +29,7 @@
             margin-left: auto
             margin-right: auto
             h1
-                line-height: 1.6
+                line-height: 1.4
                 font-weight: 500
                 margin: 0
     .blog-author
